@@ -343,19 +343,20 @@ verilog/inc1.v:668: `line 668 "verilog/inc1.v" 0
 verilog/inc1.v:668:  initial do begin $display ("DEBUG : %s [%m]", $sformatf ("Functional coverage enabled: u_a")); end while(0);
 verilog/inc1.v:669:  endgenerate
 verilog/inc1.v:670: endmodule
-verilog/inc1.v:675: predef 0 0
-verilog/inc1.v:676: predef 1 1
-verilog/inc1.v:677: predef 2 2
-verilog/inc1.v:678: predef 3 3
-verilog/inc1.v:679: predef 10 10
-verilog/inc1.v:680: predef 11 11
-verilog/inc1.v:681: predef 20 20
-verilog/inc1.v:682: predef 21 21
-verilog/inc1.v:683: predef 22 22
-verilog/inc1.v:684: predef 23 23
-verilog/inc1.v:685: predef -2 -2
-verilog/inc1.v:686: predef -1 -1
-verilog/inc1.v:687: predef 0 0
-verilog/inc1.v:688: predef 1 1
-verilog/inc1.v:689: predef 2 2
-verilog/inc1.v:691: `line 691 "verilog/inc1.v" 2
+verilog/inc1.v:675: "`NOT_DEFINED_STR"
+verilog/inc1.v:680: predef 0 0
+verilog/inc1.v:681: predef 1 1
+verilog/inc1.v:682: predef 2 2
+verilog/inc1.v:683: predef 3 3
+verilog/inc1.v:684: predef 10 10
+verilog/inc1.v:685: predef 11 11
+verilog/inc1.v:686: predef 20 20
+verilog/inc1.v:687: predef 21 21
+verilog/inc1.v:688: predef 22 22
+verilog/inc1.v:689: predef 23 23
+verilog/inc1.v:690: predef -2 -2
+verilog/inc1.v:691: predef -1 -1
+verilog/inc1.v:692: predef 0 0
+verilog/inc1.v:693: predef 1 1
+verilog/inc1.v:694: predef 2 2
+verilog/inc1.v:696: `line 696 "verilog/inc1.v" 2
