@@ -6,9 +6,11 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog-Perl 3.471 devel
 
-****  Add error on misused define, #1659. [Topa Tota]
+****  Add error on misused define (#1659). [Topa Tota]
 
 ****  Fix packages as enum base types, Verilator bug 2202. [Driss Hafdi]
+
+****  Fix preprocessor stringify of undefined macro (#1668). [Martin Whitaker]
 
 
 * Verilog-Perl 3.470 2020-01-06
